@@ -7,8 +7,8 @@
 // CREDITS
 //   Written by Michal Cichon
 //------------------------------------------------------------------------------
-# include "builders.h"
 # define IMGUI_DEFINE_MATH_OPERATORS
+# include "builders.h"
 # include <imgui_internal.h>
 
 
