@@ -1,5 +1,5 @@
-# include "widgets.h"
 # define IMGUI_DEFINE_MATH_OPERATORS
+# include "widgets.h"
 # include <imgui_internal.h>
 
 void ax::Widgets::Icon(const ImVec2& size, IconType type, bool filled, const ImVec4& color/* = ImVec4(1, 1, 1, 1)*/, const ImVec4& innerColor/* = ImVec4(0, 0, 0, 0)*/)
