@@ -1,5 +1,5 @@
-# include <imgui.h>
 # define IMGUI_DEFINE_MATH_OPERATORS
+# include <imgui.h>
 # include <imgui_internal.h>
 # include <imgui_canvas.h>
 # include <application.h>
