@@ -4,6 +4,8 @@ v0.9.2 (WIP):
 
     CHANGE: Editor: Define IMGUI_DEFINE_MATH_OPERATORS before <imgui.h> (#209), thanks @ocornut
 
+    CHANGE: Examples: Define IMGUI_DEFINE_MATH_OPERATORS before <imgui.h> (#209), thanks @ocornut
+
     BUGFIX: Editor: Correctly initialize 'width' for view resize code (thx @gnif)
 
     BUGFIX: Examples: Handle node deletion before links (#182)
